Fixed z-index issue with menu-toggle on index

--- a/css/app.css
+++ b/css/app.css
@@ -6849,6 +6849,12 @@ form#index-contact-form span.input-group-label.error {
   background: #F4F4F4;
 }
 
+#index #mobileNavBar-wrapper {
+  position: absolute;
+  right: 0;
+  z-index: 100;
+}
+
 #index header {
   height: 28.75rem;
   position: relative;
